website: fix images overlaping (ios 10)

--- a/website/assets/styles/pages/osquery-management.less
+++ b/website/assets/styles/pages/osquery-management.less
@@ -155,7 +155,6 @@
   }
 
   [purpose='feature-image'] {
-    height: 100%;
     img {
       max-height: 300px;
     }
